--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-/bionoi/__pycache__/
-/bionoi_cnn/__pycache__/
-/bionoi_cnn_homology_reduced/__pycache__/
-/bionoi_ml/__pycache__/
-/homology_reduced_folds/__pycache__/
+/bionoi_output
+.vscode
+*/__pycache__
+/homology_reduced_mols
